New placeholder message.

--- a/src/placeholder/index.html
+++ b/src/placeholder/index.html
@@ -60,9 +60,10 @@
       <hr>
 
       <div class="jumbotron">
-        <h1>HelloWord!</h1>
-        <p class="lead">Trova la persona giusta in mezzo alla folla e uccidila con una frase nota solo a voi due...</p>
-        <a class="btn btn-large btn-success" href="#">Coming soon...</a>
+        <h1>HelloWord</h1>
+        <p class="lead">Niente avatar, niente PG, niente display. HelloWord, real massive social game.</p>
+        <p class="lead">Qui il vero giocatore sei tu!</p>
+        <a class="btn btn-large btn-success" href="#">Entra nel mondo di Alice</a>
       </div>
 
       <hr>
