--- a/src/placeholder/index.html
+++ b/src/placeholder/index.html
@@ -60,7 +60,7 @@
       <hr>
 
       <div class="jumbotron">
-        <h1>HelloWord</h1>
+        <h1>HelloWord.me</h1>
         <p class="lead">Niente avatar, niente PG, niente display. HelloWord, real massive social game.</p>
         <p class="lead">Qui il vero giocatore sei tu!</p>
         <a class="btn btn-large btn-success" href="#">Entra nel mondo di Alice</a>
