Forgot about that.

--- a/src/placeholder/index.html
+++ b/src/placeholder/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>HelloWord - words may kill</title>
+    <title>HelloWord.me - words may kill</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Dan Tumaykin">
 
