New background and textes for placeholder.

--- a/src/placeholder/index.html
+++ b/src/placeholder/index.html
@@ -13,6 +13,8 @@
       body {
         padding-top: 20px;
         padding-bottom: 40px;
+        background-image: url(./img/background.png);
+        background-repeat: repeat;
       }
 
       /* Custom container */
@@ -46,24 +48,19 @@
         margin-top: 28px;
       }
     </style>
-    <link href="../css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
   </head>
 
   <body>
 
     <div class="container-narrow">
-
-      <div class="masthead">
-        <img src="img/words.jpg" width="700"/>
-      </div>
-
       <hr>
 
       <div class="jumbotron">
         <h1>HelloWord.me</h1>
         <p class="lead">Niente avatar, niente PG, niente display. HelloWord, real massive social game.</p>
         <p class="lead">Qui il vero giocatore sei tu!</p>
-        <a class="btn btn-large btn-success" href="#">Entra nel mondo di Alice</a>
+        <a class="btn btn-large btn-success" href="#">Inizia a giocare</a>
       </div>
 
       <hr>
